Bug #21086: server crashes when VIEW defined with a SELECT with COLLATE clause is called   When executing INSERT over a view with calculated columns it was assuming all   elements of the fields collection are actually Item_field instances.   This may not be true when inserting into a view and that view has columns that are   such expressions that allow updating (like setting a collation for example).   Corrected to access field information through the filed_for_view_update() function and   retrieve correctly the field info even for "update-friendly" non-Item_field items.